🐛fix(*): items not visually hidden on mobile devices

--- a/src/components/ImageLayer/ImageLayer.module.css
+++ b/src/components/ImageLayer/ImageLayer.module.css
@@ -15,14 +15,14 @@
   left: var(--space2XL);
   z-index: var(--zIndex1);
 
+  .text {
+    color: var(--rgbWhite);
+  }
+
   @media (--mediaMobile) {
     left: var(--spaceM);
     bottom: var(--spaceXL);
   }
-}
-
-.text {
-  color: var(--rgbWhite);
 }
 
 .circle {
@@ -40,6 +40,7 @@
 
   & .icon {
     margin-top: var(--spaceXS);
+    color: var(--rgbBlack);
   }
 
   @media (--mediaTablet) {
@@ -55,8 +56,4 @@
     bottom: var(--spaceM);
     border-radius: calc(var(--borderRadius4) + var(--borderRadius4));
   }
-}
-
-.icon {
-  color: var(--rgbBlack);
 }
